Bug 506047 - Export > Other application saves the image with a broken name to the default save location
Summary: Export > Other application saves the image with a broken name to the default ...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.4.0
Platform: Fedora RPMs Linux
: HI normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
: 508455 508611 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-06-23 13:51 UTC by Kaloian Kozlev
Modified: 2025-10-23 22:29 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.1
Sentry Crash Report:


Attachments
Screenshot of the issue (23.35 KB, image/png)
2025-06-23 13:51 UTC, Kaloian Kozlev
Details
Spectacle Export Causing Duplicate Files (Exported to Gwenview) (3.16 MB, image/gif)
2025-09-11 20:51 UTC, Abystus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kaloian Kozlev 2025-06-23 13:51:16 UTC
Created attachment 182558 [details]
Screenshot of the issue

SUMMARY
After upgrading to KDE 6.4 and using the new Spectacle, I have found a strange bug. When using the export function, Spectacle does not always seem to export the image to another app; if, however, you select "Other Applications" and select the same app, then it will work. 

More importantly, when tracing the issue, I saw that Spectacle saves the same screenshot twice—once with the correctly parsed name and once without.

STEPS TO REPRODUCE
1. Open Spectacle.
2.  Create a screenshot; do not save it, but try to export it.
3. Observe the screenshot name

OBSERVED RESULT
Duplicate images with different names

EXPECTED RESULT
Only one screenshot with the correct name

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.4.0
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1
Kernel Version: 6.14.11-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 8845HS w/ Radeon 780M Graphics
Memory: 16 GiB of RAM (13.4 GiB usable)
Graphics Processor: AMD Radeon 780M Graphics

ADDITIONAL INFORMATION
Comment 1 Noah Davis 2025-07-07 18:32:05 UTC
I've seen this bug happen before, but I can't reproduce it anymore.
Comment 2 Chaoting Liu 2025-07-23 18:38:25 UTC
Can reproduce the bug, but observed a bit different result:

It seems the programmed behaviour is to have a file saved and open that file to the exported program.

So, if the user does not save a file via the expored program, there is only one file with the raw scheme (filename included unrendered `<>`) saved.

The OS/Software configuration (via kinfocenter):
Operating System: Arch Linux 
KDE Plasma Version: 6.4.3
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.7-zen1-1-zen (64-bit)
Graphics Platform: Wayland
Processors: 12 × 12th Gen Intel® Core™ i5-1235U
Memory: 32 GiB of RAM (31.0 GiB usable)
Graphics Processor: Intel® Iris® Xe Graphics
Comment 3 Nate Graham 2025-08-19 19:26:33 UTC
*** Bug 508455 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2025-08-22 17:02:24 UTC
*** Bug 508611 has been marked as a duplicate of this bug. ***
Comment 5 Abystus 2025-09-11 20:51:19 UTC
Created attachment 184897 [details]
Spectacle Export Causing Duplicate Files (Exported to Gwenview)

I’m experiencing this issue as well. I’ve attached a GIF file (spectacle_duplication.gif) to the bug report that demonstrates the problem in action. 

Operating System: openSUSE Tumbleweed 20250904
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.2
Kernel Version: 6.16.3-1-default (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9700X 8-Core Processor
Memory: 32 GiB of RAM (30.5 GiB usable)
Graphics Processor 1: AMD Radeon RX 9070
Graphics Processor 2: AMD Radeon Graphics
Gwenview Version: 25.08.0
Spectacle Version: 6.4.4
Comment 6 Nate Graham 2025-10-07 18:50:40 UTC
Raising priority due to it being a basic feature that's broken.
Comment 7 Bug Janitor Service 2025-10-22 10:41:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/482
Comment 8 Noah Davis 2025-10-22 16:12:23 UTC
Git commit ab1b9187c1bf18357ba10f74e4648ab3a3158124 by Noah Davis.
Committed on 22/10/2025 at 10:52.
Pushed by ndavis into branch 'master'.

Set export image and update timestamp when entering the rectangle screenshot mode

I think there was a reason why I didn't do this before. It may have had something to do with what should happen when canceling a rectangle screenshot. It seems like there isn't any reason not to do it now since there isn't any way to undo the base image change when doing a new rectangle screenshot.
Related: bug 506067

M  +3    -1    src/SpectacleCore.cpp

https://invent.kde.org/plasma/spectacle/-/commit/ab1b9187c1bf18357ba10f74e4648ab3a3158124
Comment 9 Noah Davis 2025-10-22 16:12:52 UTC
Git commit e2c66f2e54b797300fb320ebd43dfe09e219f0d9 by Noah Davis.
Committed on 22/10/2025 at 16:12.
Pushed by ndavis into branch 'Plasma/6.5'.

Set export image and update timestamp when entering the rectangle screenshot mode

I think there was a reason why I didn't do this before. It may have had something to do with what should happen when canceling a rectangle screenshot. It seems like there isn't any reason not to do it now since there isn't any way to undo the base image change when doing a new rectangle screenshot.
Related: bug 506067


(cherry picked from commit ab1b9187c1bf18357ba10f74e4648ab3a3158124)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +3    -1    src/SpectacleCore.cpp

https://invent.kde.org/plasma/spectacle/-/commit/e2c66f2e54b797300fb320ebd43dfe09e219f0d9