Set export image and update timestamp when entering the rectangle screenshot mode

I think there was a reason why I didn't do this before. It may have had something to do with what should happen when canceling a rectangle screenshot. It seems like there isn't any reason not to do it now since there isn't any way to undo the base image change when doing a new rectangle screenshot.

BUG: 506047
BUG: 506067


(cherry picked from commit ab1b9187c1bf18357ba10f74e4648ab3a3158124)

Co-authored-by: Noah Davis <noahadvs@gmail.com>